# tpm2-totp-mfa

./: .gitignore  CMakeLists.txt  README.md  disassembling_TPM2B_PRIVATE.md
src/: hash_key.cpp  hash_key.h  main.cpp  nv_index.cpp  nv_index.h  policy.cpp  policy.h  primary_key.cpp  primary_key.h  sym_key.cpp  sym_key.h  totp.cpp  totp.h  tpm.cpp  tpm.h  tpm_exception.h  utils.cpp  utils.h
